--- a/css/styles.css
+++ b/css/styles.css
@@ -5,5 +5,15 @@
 
 button{
   margin-top:20px;
-  width:300px;
+  width:400px;
+}
+
+#results{
+  display: none;
+}
+
+img{
+  display: none;
+  height: 320px;
+  width: 280px;
 }
